# claude

./: .gitignore  .mcp.json  README.md  instructions.md  main.py  pyproject.toml  毕业总结.md
.claude/: CLAUDE.md  MEMORY.md  settings.local.json
code-review-agent/: pyproject.toml
code-review-agent/prompts/: system.md
code-review-agent/src/code_review_agent/: __init__.py  agent.py  types.py
code-review-agent/src/code_review_agent/core/: __init__.py  analyzer.py  context_reader.py  diff_fetcher.py  scope_detector.py
code-review-agent/src/code_review_agent/tools/: __init__.py  gh.py  git.py  reader.py  writer.py
code-review-agent/tests/: test_agent.py  test_review.py
pg-mcp/: .env.example  README.md  pyproject.toml  setup_db.py  test.md  test_mcp.py  test_query.py
pg-mcp/.claude/: settings.json
pg-mcp/fixtures/: README.md  large.sql  medium.sql  rebuild.ps1  small.sql
pg-mcp/src/pg_mcp/: __init__.py  __main__.py  config.py  errors.py  logging.py  models.py  server.py
pg-mcp/src/pg_mcp/db/: __init__.py  pool_manager.py
pg-mcp/src/pg_mcp/llm/: __init__.py  client.py  prompts.py  schema_retriever.py
pg-mcp/src/pg_mcp/middleware/: __init__.py  metrics.py  rate_limiter.py
pg-mcp/src/pg_mcp/schema/: __init__.py  cache.py  collector.py  models.py
pg-mcp/src/pg_mcp/sql/: __init__.py  executor.py  validator.py
pg-mcp/src/pg_mcp/verification/: __init__.py  verifier.py
pg-mcp/tests/: conftest.py  docker-compose.yml  test_circuit.py  test_config.py  test_db_security.py  test_e2e.py  test_executor.py  test_llm_client.py  test_llm_retry.py  test_metrics.py  test_models.py  test_pipeline.py  test_prompts.py  test_rate_limiter.py  test_schema_cache.py  test_schema_retriever.py  test_server.py  test_validator.py  test_verifier.py
pg-mcp/tests/fixtures/: seed.sql
simple-agent/: README.md  pyproject.toml
simple-agent/examples/: example_basic.py  example_mcp.py  example_mcp_real.py  example_stream.py  mock_mcp_server.py
simple-agent/src/simple_agent/: __init__.py  agent.py  config.py  types.py
simple-agent/src/simple_agent/llm/: __init__.py  client.py
simple-agent/src/simple_agent/mcp/: __init__.py  client.py
simple-agent/src/simple_agent/tool/: __init__.py  executor.py  registry.py
specs/: 0001-pg-mcp-prd.md  0002-pg-mcp-design.md  0004-pg-mcp-impl-plan.md  0005-pg-mcp-impl-plan-review.md  0006-pg-mcp-code-review.md  0007-pg-mcp-test-plan.md  0008-pg-mcp-test-plan-review.md  0010-simple-agent-design.md  0011-code-review-agent-design.md  0012-code-review-agent-codex-review.md  009-pg-mcp-code-review-result.md  mqtt.md
(+8 files in other folders)
