[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pg-mcp"
version = "0.1.0"
description = "Natural language PostgreSQL query MCP server"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.0",
    "asyncpg>=0.29",
    "sqlglot>=26.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "openai>=1.0",
    "structlog>=24.0",
]

[project.scripts]
pg-mcp = "pg_mcp.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov",
    "ruff",
    "mypy",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pg_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Unit tests, no external dependencies",
    "integration: Integration tests, require Docker PostgreSQL",
    "e2e: End-to-end tests",
    "security: Security-related tests",
    "slow: Tests taking > 5 seconds",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
